// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #036FE3;
  box-shadow: 0px 0px 0px 3px #98CBFF;
}

.emotion-0:checked + label {
  border-color: #036FE3;
  background: #036FE3;
}

.emotion-0:disabled + label {
  border-color: #AEC1CC;
  background: #AEC1CC;
}

.emotion-0:checked + label::before {
  background: #ffffff;
}

.emotion-0:checked:disabled + label::before {
  background: #67728A;
}

.emotion-0:disabled + label::before {
  background: #67728A;
}

.emotion-1 {
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #AEC1CC;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 50%;
}

.emotion-1:before {
  content: "";
  border-radius: 50%;
  background-color: #ffffff;
  width: 6px;
  height: 6px;
}

.emotion-2 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
}

<div
  class="emotion-2"
  data-test-id="cf-ui-radio-button"
>
  <input
    aria-label="radio-button"
    class="emotion-0"
    type="radio"
    value=""
  />
  <label
    class="emotion-1"
  >
    <span />
  </label>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #036FE3;
  box-shadow: 0px 0px 0px 3px #98CBFF;
}

.emotion-0:checked + label {
  border-color: #036FE3;
  background: #036FE3;
}

.emotion-0:disabled + label {
  border-color: #AEC1CC;
  background: #AEC1CC;
}

.emotion-0:checked + label::before {
  background: #ffffff;
}

.emotion-0:checked:disabled + label::before {
  background: #67728A;
}

.emotion-0:disabled + label::before {
  background: #67728A;
}

.emotion-1 {
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #AEC1CC;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 50%;
}

.emotion-1:before {
  content: "";
  border-radius: 50%;
  background-color: #ffffff;
  width: 6px;
  height: 6px;
}

.emotion-2 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
}

<div
  class="my-extra-class emotion-2"
  data-test-id="cf-ui-radio-button"
>
  <input
    aria-label="radio-button"
    class="emotion-0"
    type="radio"
    value=""
  />
  <label
    class="emotion-1"
  >
    <span />
  </label>
</div>
`;
